
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/multi_id.proto";

message so_extFollower {
	prototype.follower_relation            follower_info                   =      1;
    prototype.follower_created_order       follower_created_order          =      2;
      
}


message so_mem_extFollower_by_follower_info {
	prototype.follower_relation         	follower_info               = 1;
}


message so_mem_extFollower_by_follower_created_order {
	prototype.follower_created_order    	follower_created_order      = 1;
}


message so_list_extFollower_by_follower_created_order {
	prototype.follower_created_order    	follower_created_order      = 1;
	prototype.follower_relation         	follower_info               = 2;
}


message so_unique_extFollower_by_follower_info {
	prototype.follower_relation         	follower_info               = 1;
}
